Wrapping correct

--- a/_sass/hydeout/_posts.scss
+++ b/_sass/hydeout/_posts.scss
@@ -73,7 +73,6 @@ h2.post-title, h2.page-title {
     small {
       font-size: 75%;
       color: #999;
-      white-space: nowrap;
     }
 
     a:hover {
